<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_warnning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="@dimen/host_8"
        android:paddingBottom="@dimen/host_8"
        android:background="@android:color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collect_warnning"/>
        <TextView
            android:id="@+id/tv_warnning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/host_text_16"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collect_warnning_bac"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.pal.collecttool.AutoFitTextureView
            android:id="@+id/texture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>


        <ImageButton
            android:id="@+id/picture"
            android:layout_width="@dimen/host_60"
            android:layout_height="@dimen/host_60"
            android:layout_gravity="center"
            android:src="@mipmap/camera"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:layout_marginBottom="@dimen/host_30"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</LinearLayout>
